<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Preparation</string>
    <string name="rokok">Rokok</string>
    <string name="study">Ilmu Baru</string>
    <string name="lampu">Lampu</string>
    <string name="pc">PC</string>
    <string name="number">Extra</string>
    <string name="age">Umur</string>
    <string name="lost">Membutuhkan :</string>
    <string name="money">Rp. <xliff:g example="10000" id="price">%s</xliff:g> /hari</string>
    <string name="money1">Rp. <xliff:g example="100000" id="price">%s</xliff:g> /bulan</string>
    <string name="money2">Rp. <xliff:g example="1000000" id="price">%s</xliff:g> /tahun</string>
    <string name="calculate">Hitung</string>
    <string name="batang">Batang</string>
    <string name="bungkus">Bungkus</string>
    <string name="qty">0</string>
    <string name="day">Perhari</string>
    <string name="moree">Too Much</string>
    <string name="fewe">how?</string>
    <string name="HW">Hardware</string>
    <string name="title_activity_drawing">Drawing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
